# gigaChess

./: .gitignore  LICENSE  config.py  db.sqlite3  main.py  pyproject.toml
core/: __init__.py  crypto.py  templates_config.py
core/bd/: __init__.py  utils.py
modules/: __init__.py
modules/auth/: __init__.py  crud.py  models.py  schemas.py  views.py
static/scripts/: base.js
static/styles/: base.css
templates/: base.html  landing.html
